--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -50,7 +50,7 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
         run: |
-          echo "Triggering Render deploy for service: RENDER_SERVICE_ID"
+          echo "Triggering Render deploy for service: $RENDER_SERVICE_ID"
 
           # Call Render API, save response and HTTP code
           http_code=$(curl -sS -o /tmp/render_resp.json -w "%{http_code}" -X POST \
